--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-background-actions": "^3.0.1",
     "react-native-get-location": "^4.0.1"
   },
   "devDependencies": {
